@@ -22,6 +22,13 @@ I started this file to keep track of changes made in hybrid-6,
 beginning with b37.  We are in VERY HIGH SPEED development mode,
 so it's important to keep track of this. =)
 
+version hybrid-6-b41    23-Jan-1999
+* removed USERNAMES_IN_TRACE default is always on now
+* get_client_name() will default to sptr->username if sptr->user->username
+  is null
+* made config.h/config.h.dist consistent again, went back to stock defaults
+-Dianora
+	
 version hybrid-6-b40    21-Jan-1999
 * redid m_invite for better sanity testing, you can no longer
   invite users to a non-existent channel for example.
